# LogOut

./: .crush.json  .gitattributes  .gitignore  .gitmodules  .lighthouserc.json  AGENTS.md  ANDROID.md  CODE_QUALITY_REVIEW.md  Cargo.toml  DATA_MIGRATION.md  Dioxus.toml  QUICK_REFERENCE.md  README.md  STORIES.md  SUMMARY.md  USER_STORIES.md  android.nix  build.rs  build.sh  deny.toml  flake.nix  garnix.yaml  index.html  package-lock.json  package.json  playwright.config.ts  renovate.json  sw.js
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: cd-android.yml  cd.yml  ci.yml  copilot-setup-steps.yml  deploy.yml  heavy.yml  nightly.yml  tests.yml  weekly.yml
.script/: aab-sign.sh  android-icon.sh  android-sign.sh  bump-version.sh  changelog-notes.sh  check.sh  coverage-report.sh  e2e-web-report.sh  lighthouse-report.sh  prerelease-cleanup.sh  prerelease.sh  web-deploy.sh  web-prerelease.sh  web-preview-deploy.sh
android/: AndroidManifest.xml  MainActivity.kt  gradle.properties  proguard-rules.pro
android/res/values/: strings.xml  styles.xml  themes.xml
assets/: _component.scss  _context.scss  _generic.scss  _light.scss  _specific.scss  _structure.scss  _unique.scss  edit.scss  en.ftl  es.ftl  fr.ftl  manifest.json  more.scss  session.scss  sessions.scss  style.scss  styles.css
e2e/: app.spec.ts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
icon/web/: README.md
maestro/: launch.yaml  navigation.yaml  session.yaml
maestro/android/: 01_clean_state_home.yaml  01_view_home_screen.yaml  02_allow_notifications.yaml  02_navigate_exercise_list.yaml  02_start_workout_session.yaml  03_cancel_empty_session.yaml  03_clean_state_exercise_list.yaml  03_navigate_credits.yaml  04_clean_state_credits.yaml  04_navigate_exercise_browser.yaml  04_search_exercises_browser.yaml  05_change_exercises_database.yaml  05_learn_about_exercise.yaml  05_search_exercises_browser.yaml  06_add_custom_exercise.yaml  06_navigate_analytics.yaml  06_navigate_exercise_list.yaml  07_clean_state_exercise_list.yaml  07_edit_cloned_exercise.yaml  07_navigate_credits.yaml  08_navigate_analytics.yaml  08_search_exercises_browser.yaml  08_search_exercises_session.yaml  09_clean_state_analytics.yaml  09_full_workout_session.yaml  09_learn_about_exercise.yaml  10_add_custom_exercise.yaml  10_navigate_credits.yaml  10_remove_exercise_from_session.yaml  11_clean_state_credits.yaml  11_delete_past_session.yaml  11_edit_cloned_exercise.yaml  12_navigate_analytics.yaml  12_navigate_back_home.yaml  12_repeat_session.yaml  13_add_custom_exercise.yaml  13_clean_state_analytics.yaml  13_start_workout_session.yaml  14_cancel_empty_session.yaml  14_navigate_back_home.yaml  (+21 more)
maestro/subflows/: cancel_session.yaml  create_bench_squat_session.yaml  finish_session.yaml  nav_analytics.yaml  nav_credits.yaml  nav_exercises.yaml  nav_home.yaml  record_bench_press_2sets.yaml  record_squat_set.yaml  setup_local_db.yaml  start_session.yaml
maestro/web/: 01_clean_state_home.yaml  01_start.yml  01_view_home_screen.yaml  02_allow_notifications.yaml  02_allow_notifications.yml  02_navigate_exercise_list.yaml  02_start_workout_session.yaml  03_cancel_empty_session.yaml  03_clean_state_exercise_list.yaml  03_navigate_credits.yaml  03_navigate_to_credits.yml  04_clean_state_credits.yaml  04_clean_state_credits.yml  04_navigate_exercise_browser.yaml  04_search_exercises_browser.yaml  05_change_exercises_database.yaml  05_change_exercises_database.yml  05_learn_about_exercise.yaml  05_search_exercises_browser.yaml  06_add_custom_exercise.yaml  06_navigate_analytics.yaml  06_navigate_exercise_list.yaml  06_navigate_to_exercise_list.yml  07_clean_state_exercise_list.yaml  07_clean_state_exercise_list.yml  07_edit_cloned_exercise.yaml  07_navigate_credits.yaml  08_navigate_analytics.yaml  08_search_exercises.yml  08_search_exercises_browser.yaml  08_search_exercises_session.yaml  09_clean_state_analytics.yaml  09_full_workout_session.yaml  09_learn_about_exercise.yaml  09_learn_about_exercise.yml  10_add_custom_exercise.yaml  10_add_custom_exercise.yml  10_navigate_credits.yaml  10_remove_exercise_from_session.yaml  11_clean_state_credits.yaml  (+60 more)
maestro/web/_flows/: cancel_session.yaml  finish_session.yaml  nav_exercises.yaml  nav_home.yaml  record_bench_press_2sets.yaml  record_squat_set.yaml  setup_past_session.yml  setup_progress_sessions.yml  start_session.yaml
public/: 404.html  exercises.fr.json  exercises.json  manifest.json  sw.js  test-setup.html
scripts/: android-icon.sh  android-sign.sh  coverage-gate.sh  sign.sh  web-test.sh
src/: main.rs  utils.rs
src/components/: active_session.rs  add_custom_exercise.rs  add_exercise.rs  analytics.rs  analytics_panel.rs  bottom_nav.rs  completed_exercise_log.rs  credits.rs  custom_exercise_form.rs  edit_custom_exercise.rs  edit_exercise.rs  exercise_card.rs  exercise_form_fields.rs  exercise_list.rs  exercises.rs  hold_delete.rs  home.rs  mod.rs  more.rs  session_exercise_form.rs  session_timers.rs  workout_log.rs
src/components/active_session/: completed_exercises.rs  header.rs  mod.rs  pending_exercises.rs  rest_input.rs
src/components/analytics/: chart.rs  mod.rs  selector.rs
src/models/: analytics.rs  enums.rs  exercise.rs  log.rs  mod.rs  session.rs  units.rs
src/services/: android_notifications.rs  app_state.rs  exercise_db.rs  exercise_loader.rs  imgcache.rs  mod.rs  native_queue.rs  notifications.rs  service_worker.rs  storage.rs  wake_lock.rs
(+10 files in other folders)
