[package]
name = "log-workout"
version = "0.1.0"
edition = "2021"

[features]
default = ["web-platform"]
web-platform = ["dioxus/web"]  # Enable web renderer (WASM / browser)
mobile-platform = ["dioxus/mobile"]  # Enable mobile renderer (Android / iOS)

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Navigator",
    "ServiceWorkerContainer", "ServiceWorkerRegistration",
    "Document", "Element", "EventTarget", "VisibilityState",
    "Notification", "NotificationPermission", "NotificationOptions",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
gloo-timers = "0.3"
rexie = "0.6"
time = { version = "0.3", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["time", "rt"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
dirs = "6"

[[bin]]
name = "log-workout"
path = "src/main.rs"
