[package]
name = "logout"
version = "0.2.8"
edition = "2021"

[features]
default = ["web-platform"]
web-platform = ["dioxus/web"]  # Web renderer (WASM / browser)
mobile-platform = ["dioxus/mobile"]  # Mobile renderer (Android / iOS)
server-platform = ["dioxus/server"]  # Server renderer (native binary serving PWA)

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-logger = "0.7"
dioxus-i18n = "0.5.1"
unic-langid = { version = "0.9", features = ["macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
strum = { version = "0.27", features = ["derive"] }
sys-locale = "0.3.2"
futures-util = "0.3"
futures-channel = "0.3"
percent-encoding = "2.3.2"
thiserror = "2"
# sqlite-wasm-rs = "0.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Navigator",
    "ServiceWorkerContainer", "ServiceWorkerRegistration",
    "Document", "Element", "EventTarget", "VisibilityState",
    "Notification", "NotificationPermission", "NotificationOptions",
    "Blob", "BlobPropertyBag", "Url",
    "HtmlAnchorElement", "HtmlInputElement",
    "FileList", "File", "FileReader",
    "ProgressEvent",
    "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
gloo-timers = "0.3"
rexie = "0.6"
time = { version = "0.3", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["time", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
jni = "0.21"

[[bin]]
name = "log-out"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Better optimization, slower compile
panic = "abort"      # Remove stack unwinding code
strip = true         # Strip symbols
